# session

./: .travis.yml  AUTHORS.md  CMakeLists.txt  README.md  features.cmake
.github/workflows/: build.yml  checks.yml
.github/workflows/scripts/: build-deps
.reuse/: dep5
.travis/: build.sh  deploy.sh  github_deploy_key_liri_ci.enc
.tx/: config  sources.json
data/menu/: CMakeLists.txt
data/settings/: CMakeLists.txt
data/systemd/: CMakeLists.txt  liri-daemon-locale.service.in  liri-daemons.target  liri-launcher.service.in  liri-services.target  liri-session-pre.target  liri-session-shutdown.service.in  liri-session.target
data/systemd/autostart/: CMakeLists.txt
src/daemon/: CMakeLists.txt  daemon.cpp  daemon.h  daemoninterface.cpp  daemoninterface.h  diagnostics.cpp  diagnostics.h  io.liri.Daemon.xml  io.liri.SessionManager.xml  liri.desktop.in  liri.desktop.in.in  main.cpp  pluginregistry.cpp  pluginregistry.h  session.cpp  session.h  sessionmanager.cpp  sessionmanager.h  translation.cpp
src/daemon/translations/: liri_ca.desktop  liri_fr.desktop  liri_pl.desktop  liri_pt_BR.desktop
src/generators/: CMakeLists.txt  autostart-generator.cpp
src/imports/session/: CMakeLists.txt  plugin.cpp  qmldir  qmllauncher.cpp  qmllauncher.h  qmlsessionmanager.cpp  qmlsessionmanager.h
src/launcher/: CMakeLists.txt  io.liri.Launcher.service.in  main.cpp  processlauncher.cpp  processlauncher.h
src/libdaemon/: CMakeLists.txt  daemonmodule.cpp  daemonmodule.h
src/libsession/: CMakeLists.txt  sessionmodule.cpp  sessionmodule.h  sessionmodule_p.h
src/libsigwatch/: CMakeLists.txt
src/manager/: CMakeLists.txt  io.liri.SessionManager.xml  liri.desktop.in  liri.desktop.in.in  main.cpp  session-ctl.cpp  session.cpp  session.h  sessionmanager.cpp  systemdmanager.cpp  systemdmanager.h  translation.h  utils.cpp  utils.h
src/manager/backends/: fakebackend.cpp  fakebackend.h  logindbackend.cpp  logindbackend.h  sessionbackend.cpp  sessionbackend.h
src/manager/backends/logind/: logind.cpp  logind.h  logind_p.h  logindtypes.cpp  logindtypes_p.h
src/manager/dbus/: io.liri.Launcher.xml  processlauncher.cpp  processlauncher.h  screensaver.cpp  screensaver.h  sessionmanager.cpp  sessionmanager.h
src/manager/translations/: liri_lt.desktop  liri_zh_CN.desktop
src/plugins/autostart/: CMakeLists.txt  plugin.cpp  plugin.h  plugin.json
src/plugins/daemon/locale/: CMakeLists.txt  plugin.cpp  plugin.h  plugin.json
src/plugins/locale/: CMakeLists.txt  plugin.cpp
src/plugins/services/: plugin.cpp  plugin.h  plugin.json
src/plugins/session/autostart/: CMakeLists.txt  plugin.cpp  plugin.json
src/plugins/session/locale/: plugin.h  plugin.json
src/plugins/session/services/: CMakeLists.txt  plugin.cpp  plugin.h  plugin.json
src/plugins/session/shell/: CMakeLists.txt  plugin.cpp  plugin.h  plugin.json
src/plugins/shell/: CMakeLists.txt  plugin.cpp  plugin.h
src/session/: CMakeLists.txt  sessionmodule.cpp  sessionmodule.h
translations/manager/: desktop.pot  desktop.pot.po  desktop_ca.po  desktop_da.po  desktop_de.po  desktop_fr.po  desktop_it_IT.po  desktop_lt.po  desktop_nl.po  desktop_pl.po  desktop_pt_BR.po  desktop_ru.po  desktop_ru_RU.po  desktop_tr.po  desktop_zh_CN.po  liri_da.desktop  liri_fr.desktop  liri_ru.desktop  liri_tr.desktop
